@@ -1,6 +1,7 @@
 Revision history for exact
 
 {{$NEXT}}
+        - Add Carp helper functions
 
 1.26      2024-09-08 06:32:24-07:00 America/Los_Angeles
 
